--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ border-bottom: #008ed6 3px solid;
 }
 */
 
-.glow a:hover{ 
+/* .glow a:hover{ 
     transition: 2s;
   animation: pulse 2s infinite;
   animation-timing-function: linear;   
@@ -88,7 +88,7 @@ border-bottom: #008ed6 3px solid;
   to {
     box-shadow: 0 0 10px 10px  #28b485;
   }
-}
+} */
 
 
 .dark-overlay {
